# iarmvp-demo

./: .env.dist  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE.md  README.md  _validate_demo.py  pyproject.toml  requirements.txt
.claude/: launch.json
.github/: CODEOWNERS  mergeable.yml
.github/workflows/: codeql.yml  keep-awake.yml  pre-commit.yml  test.yml
.streamlit/: config.toml
app/: IAR MVP.code-workspace  bootstrap.py  dashboard.py  data_source.py  demo_app.py
beginner UI/: dashboard.py
config/: app.toml  limits.toml
data/: iar.db-shm  iar.db-wal  limits_override.json
docs/: README.md  SUMMARY.md  assumptions.md  data_contract.md  index.md  multizone.md  validation.md
docs/development/: index.md
docs/operations/: index.md
docs/tech-overview/: index.md
docs/using/: index.md
iar/: __init__.py  main.py  service.py
iar/db/: __init__.py  models.py  session.py
iar/ingestion/: __init__.py  clients.py  flatfile_loader.py  markets_client.py  optimeering_client.py  synthetic.py  windsim_profiles.json
iar/risk/: __init__.py  aggregate.py  alerts.py  backtest.py  calibration.py  realised_cost.py  replay.py
iar/simulation/: __init__.py  engine.py  imbalance_model.py  persistence.py  price_sampler.py
reference/: README.md
scripts/: backfill_history.py  backfill_iar.py  calibrate_sigma.py  load_actuals.py  load_windsim_data.py  make_sample_data.py  refresh.py  refresh_task.bat  run_backtest.py  run_dashboard.bat  run_iar.py  run_pipeline.py  seed_demo.py  seed_synthetic_demo.py  topup_positions.py  validate_engine.py  verify_all.py
tests/: conftest.py  test_aggregate.py  test_alerts.py  test_backtest.py  test_calibration.py  test_db.py  test_engine.py  test_flatfile_loader.py  test_imbalance_model.py  test_ingestion.py  test_markets_client.py  test_optimeering_client.py  test_persistence.py  test_price_sampler.py  test_replay.py  test_service.py  test_smoke.py
